<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OneBusAway</string>
    <string name="navdrawer_item_starred_stops">Starred stops</string>
    <string name="navdrawer_item_starred_routes">Starred routes</string>
    <string name="navdrawer_item_my_reminders">My reminders</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_help">Help</string>
    <string name="navdrawer_item_send_feedback">Send feedback</string>
    <string name="navdrawer_item_open_source">Visit us on GitHub</string>
    <string name="navdrawer_item_plan_trip">Plan a trip</string>
    <string name="navdrawer_item_pay_fare">Pay my fare</string>
    <string name="trip_service_perm_label">start the trip service</string>
    <string name="trip_service_perm_description">Allows the application to implement reminders for
        upcoming buses.
    </string>
    <string name="beta_pill">BETA</string>
    <string name="generic_comm_error">Sorry, there was a communication error and we can’t show this
        information. Try again and it might work.
    </string>
    <string name="route_not_found_error_no_region">Sorry, that particular route can’t be found. If
        this was a
        shortcut, it’s possible your link is out of date, or a region hasn’t been selected yet
        (Change in
        “Preferences->Your region”).
    </string>
    <string name="route_not_found_error_with_region_name">Sorry, that particular route can’t be
        found. If this was a
        shortcut, it’s possible your link is out of date, or the wrong region is selected (Your
        current region is
        %1$s. Change in “Preferences->Your region”).
    </string>
    <string name="stop_not_found_error_no_region">Sorry, that particular stop can’t be found. If
        this was a
        shortcut, it’s possible your link is out of date, or a region hasn’t been selected yet
        (Change in
        “Preferences->Your region”).
    </string>
    <string name="stop_not_found_error_with_region_name">Sorry, that particular stop can’t be
        found. If this was a
        shortcut, it’s possible your link is out of date, or the wrong region is selected (Your
        current region is
        %1$s. Change in “Preferences->Your region”).
    </string>
    <string name="internal_error">Oops, something went wrong. Please check your Internet connection and try again.</string>
    <string name="out_of_memory_error">Sorry, there isn’t enough available memory to handle that
        request.
    </string>
    <string name="bad_gateway_error">%1$s’s servers are overloaded. Please excuse us!</string>
    <string name="map_generic_error">Unable to get stops.</string>
    <string name="map_showing_cached_stops">Showing saved stops</string>
    <string name="no_network_error">You appear to be offline or are not connected to the network.
    </string>
    <string name="airplane_mode_error">You are not connected to the network.\nTurn off Airplane
        Mode?
    </string>
    <string name="custom_api_url_error">Invalid URL. Please enter a working %1$s server.</string>
    <string name="custom_otp_api_url_error">Invalid URL. Please enter a working OpenTripPlanner server.
    </string>
    <string name="direction_n">Northbound</string>
    <string name="direction_ne">Northeast bound</string>
    <string name="direction_e">Eastbound</string>
    <string name="direction_se">Southeast bound</string>
    <string name="direction_s">Southbound</string>
    <string name="direction_sw">Southwest bound</string>
    <string name="direction_w">Westbound</string>
    <string name="direction_nw">Northwest bound</string>
    <string name="direction_none"></string>
    <string name="browser_error">Unable to launch browser.</string>
    <string name="dialer_error">Unable to open the phone dialer.</string>
    <string name="search_hint">Search stop or route IDs</string>
    <string name="checkmark_description">Selection checkmark</string>
    <string name="map_option_mylocation">My Location</string>
    <string name="map_option_search">Search</string>
    <string name="main_help_title">Help</string>
    <string name="main_help_whatsnew_title">What’s New?</string>
    <string name="main_help_whatsnew">&#8226;\u0020Bold new look for a bold new era\n&#8226;\u0020Arrivals are now grouped by route\n&#8226;\u0020Micromobility added to the bike overlay\n&#8226;\u0020Tap a stop to see its routes\n&#8226;\u0020Zoom in to see nearby routes\n&#8226;\u0020Vehicle locations extrapolated and animated\n&#8226;\u0020Track your bus with live notifications\n&#8226;\u0020Significant improvements to the trip planner\n&#8226;\u0020Several small bug fixes\n\nSee https://bit.ly/oba-android-releases</string>
    <string name="main_help_close">Close</string>
    <string name="main_help_legend_title">Legend</string>
    <string name="main_help_legend_ontime">Green means “On time” - within a minute and a half of
        the schedule, either way
    </string>
    <string name="main_help_legend_late">Blue means “Running late” - a minute and a half or more
        behind schedule
    </string>
    <string name="main_help_legend_early">Red means “Running early” - more than a minute and a half
        ahead of schedule, so it may leave before you get there
    </string>
    <string name="main_help_legend_scheduled">Gray means “Scheduled arrival” - We don’t know
        where the bus is now, but the schedule says there is an upcoming arrival
    </string>
    <string name="main_help_legend_canceled">Gray with strikethrough means the trip has been
        canceled - this bus is NOT coming
    </string>
    <string name="main_help_legend_on_map">A pin means the vehicle is on the map right now — tap the
        arrival to jump to it.
    </string>
    <string name="main_help_legend_realtime">A broadcast icon means the arrival is tracked live, but
        the vehicle isn’t drawn on the map.
    </string>
    <string name="tutorial_legend_ontime">On time</string>
    <string name="tutorial_legend_early">Running early</string>
    <string name="tutorial_legend_late">Running late</string>
    <string name="tutorial_legend_scheduled">No live data; scheduled departure</string>
    <string name="tutorial_legend_on_map">The vehicle is on the map</string>
    <string name="tutorial_legend_tracked">The vehicle for this trip is being tracked, but it’s not
        yet on this route
    </string>
    <string name="main_nolocation_title">Location not enabled</string>
    <string name="main_nolocation">%1$s would like your location, do you want to enable it now?</string>
    <string name="main_never_ask_again">Never ask again</string>
    <string name="main_never_show_again">Never show again</string>
    <string name="main_waiting_for_location">Trying to get a fix on your location&#8230;</string>
    <string name="no_location_permission">Unable to get your location.  Please give app location permissions via system settings.</string>
    <string name="map_outside_service_area">Outside %1$s service area</string>
    <string name="map_view_service_area">View service area</string>
    <string name="bus_options_menu_add_star">Add star to route</string>
    <string name="bus_options_menu_remove_star">Remove star from route</string>
    <string name="bus_options_menu_show_trip_details">Show trip status</string>
    <string name="bus_options_menu_set_reminder">Set a reminder</string>
    <string name="bus_options_menu_show_route_on_map">Show route on map</string>
    <string name="bus_options_menu_show_stop_list">Show stop list</string>
    <string name="bus_options_menu_show_route_schedule">Show route schedule</string>
    <string name="bus_options_menu_report_trip_problem">Report arrival time problem</string>
    <string name="stop_info_ontime">On time</string>
    <string name="stop_info_arrived_ontime">Arrived on time</string>
    <string name="stop_info_departed_ontime">Departed on time</string>
    <plurals name="stop_info_arrive_delayed">
        <item quantity="one">1 min delay</item>
        
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            min delay
        </item>
    </plurals>
    <string name="my_recent_title">Recent</string>
    <string name="recent_stops_shortcut">Recent Stops</string>
    <string name="recent_routes_shortcut">Recent Routes</string>
    <string name="starred_stops_shortcut">Starred Stops</string>
    <string name="trip_info_name_hint">Add a reminder name</string>
    <string name="trip_info_route">Route %s</string>
    <string name="trip_info_depart">Departs at %s</string>
    <string name="trip_info_reminder_header">Reminder Time</string>
    <string name="trip_info_separator">-</string>
    <plurals name="distance_meters">
        <item quantity="one">1 meter away</item>
        
        <item quantity="other">
            <xliff:g id="count">%s</xliff:g>
            meters away
        </item>
    </plurals>
    <string name="ok">OK</string>
    <string name="preferences_category_location">Location</string>
    <string name="preferences_category_display">Display</string>
    <string name="preferences_category_backup">Backup</string>
    <string name="preferences_category_advanced">Advanced</string>
    <string name="preferences_category_about">About</string>
    <string name="preferences_region_title">Your region</string>
    <string name="preferences_auto_select_region_title">Automatic region</string>
    <string name="preferences_auto_select_region_summary">Set your current transit region based on
        your current location
    </string>
    <string name="preferences_preferred_units_title">Preferred distance units</string>
    <string name="preferences_preferred_units_option_automatic">Automatic</string>
    <string name="preferences_oba_api_servername_title">%1$s API Server</string>
    <string name="preferences_oba_api_servername_summary">Determines the server used in %1$s API calls</string>
    <string name="preferences_oba_api_servername_hint">example.onebusaway.org</string>
    <string name="preferences_save_title">Save to storage</string>
    <string name="preferences_save_summary">Saves your starred and recent stops and routes</string>
    <string name="preferences_restore_title">Restore from storage</string>
    <string name="preferences_restore_summary">Restores from a previous backup. After selecting this option, you’ll be asked to pick a file. Please select the backup file (e.g., “db.backup” or “%1$s.backup”), which may be in your “Documents” folder or any location where you saved the backup.</string>
    <string name="preferences_experimental_regions_title">Experimental regions</string>
    <string name="preferences_experimental_regions_summary">Enables regions that may be unstable
    </string>
    <string name="preferences_analytics_title">Send anonymous usage data</string>
    <string name="preferences_analytics_summary">Help us improve the app</string>
    <string name="preferences_donate_title">Donate</string>
    <string name="preferences_donate_summary">Support the %1$s open-source project</string>
    <string name="trip_plan_advanced_settings">Additional Trip Preferences</string>
    <string name="minimize_transfers">Minimize transfers</string>
    <string name="maximum_walk_distance">Maximum walk distance: </string>
    <string name="wheelchair_accessible">Avoid stairs</string>
    <string name="donation_view_title">🚨 %1$s needs your help</string>
    <string name="donation_view_body">This app is currently built with 100% volunteer labor, and we need you to help us fund future development.</string>
    <string name="donation_view_learn_more_button">Learn More</string>
    <string name="donation_view_donate_now_button">Donate Now</string>
</resources>