<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010-2013 Brian Ferris (bdferris@onebusaway.org)
     and individual contributors

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="preferences_root">
    <PreferenceCategory android:title="@string/preferences_category_location">
        <Preference
                android:key="@string/preference_key_region"
                android:title="@string/preferences_region_title"
                android:summary="@string/preferences_region_summary"/>
        <CheckBoxPreference
                android:key="@string/preference_key_auto_select_region"
                android:title="@string/preferences_auto_select_region_title"
                android:summary="@string/preferences_auto_select_region_summary"
                android:defaultValue="true"/>
        <!-- Per discussion in Pull Request #57, 
        	 https://github.com/OneBusAway/onebusaway-android/pull/57#issuecomment-19115619
        	 we are hiding this preference for now
        <CheckBoxPreference    		
    		android:key="@string/preference_key_auto_refresh_regions"
    		android:title="@string/preferences_auto_refresh_regions_title" 
    		android:summary="@string/preferences_auto_refresh_regions_summary"
    		android:defaultValue="true"/>
    		 -->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_display">
        <ListPreference
                android:key="@string/preference_key_preferred_units"
                android:title="@string/preferences_preferred_units_title"
                android:entries="@array/preferred_units_options"
                android:entryValues="@array/preferred_units_options"
                android:defaultValue="@string/preferences_preferred_units_option_automatic">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_backup">
        <com.joulespersecond.seattlebusbot.backup.SavePreference
                android:title="@string/preferences_save_title"
                android:summary="@string/preferences_save_summary"/>
        <com.joulespersecond.seattlebusbot.backup.RestorePreference
                android:title="@string/preferences_restore_title"
                android:summary="@string/preferences_restore_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_about">
        <CheckBoxPreference
            android:key="@string/preferences_key_analytics"
            android:title="@string/preferences_analytics_title"
            android:summary="@string/preferences_analytics_summary"
            android:defaultValue="true"/>
        <Preference
                android:key="@string/preferences_key_donate"
                android:title="@string/preferences_donate_title"
                android:summary="@string/preferences_donate_summary">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_advanced">
        <com.joulespersecond.oba.region.ExperimentalRegionsPreference
                android:title="@string/preferences_experimental_regions_title"
                android:summary="@string/preferences_experimental_regions_summary"/>
        <EditTextPreference
                android:title="@string/preferences_oba_api_servername_title"
                android:summary="@string/preferences_oba_api_servername_summary"
                android:inputType="text|textNoSuggestions"
                android:hint="@string/preferences_oba_api_servername_hint"
                android:key="@string/preference_key_oba_api_url"/>
    </PreferenceCategory>
</PreferenceScreen>
