<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Cambridge Systematics, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/dialog_margin"
              android:paddingRight="@dimen/dialog_margin"
              android:paddingTop="@dimen/dialog_margin"
              android:paddingBottom="@dimen/dialog_margin"
              android:background="@color/theme_primary">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_plan_advanced_settings"
            android:textAlignment="center"
            android:textSize="@dimen/dialog_title_text_size"
            android:textColor="@color/trip_plan_headers"
            android:paddingBottom="@dimen/dialog_title_margin"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_by_label"
                android:textColor="@color/trip_plan_headers"/>

        <Spinner
                android:id="@+id/spinner_travel_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/trip_plan_headers"/>

    </LinearLayout>

    <CheckBox android:id="@+id/checkbox_minimize_transfers"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/minimize_transfers"
              android:textColor="@color/trip_plan_headers"/>

    <CheckBox android:id="@+id/checkbox_wheelchair_acccesible"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/wheelchair_accessible"
              android:textColor="@color/trip_plan_headers"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maximum_walk_distance"
                android:textColor="@color/trip_plan_headers"/>

        <EditText
                android:id="@+id/number_maximum_walk_distance"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/trip_plan_headers"/>

        <TextView
                android:id="@+id/label_minimum_walk_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/trip_plan_headers"
                android:text="@string/distance_meters"/>

    </LinearLayout>

    <Button
            android:id="@+id/advanced_settings_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:background="@color/theme_primary_dark"
            android:layout_gravity="right"/>

</LinearLayout>
