<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/donationView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="62dp"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true"
        android:layout_alignParentEnd="true"
        android:layout_width="fill_parent"
        android:visibility="visible"
        android:background="@color/quantum_white_100"
        app:cardCornerRadius="8dp"
        android:layout_height="wrap_content">

    <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/donation_view_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_weight="0"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" />

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            <ImageButton
                    android:id="@+id/btnDonationViewClose"
                    android:src="@drawable/ic_close"
                    android:background="@android:color/transparent"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
        </LinearLayout>

        <TextView
                android:text="@string/donation_view_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin" />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textSize="16sp"
                    android:text="@string/donation_view_learn_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDonationViewLearnMore"
                    android:layout_weight="1" />

            <Button
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:textSize="16sp"
                    android:textColor="@color/quantum_white_100"
                    android:text="@string/donation_view_donate_now_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDonationViewDonate"
                    android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>